--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1",
-    "react-beautiful-dnd": "^13.1.1"
+    "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
